--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "hello world",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon public/script/index.js"
+    "start": "npx nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +13,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "g": "^2.0.1",
-    "mysql2": "^3.6.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7",
-    "sequelize": "^6.35.1"
+    "path": "^0.12.7"
   }
 }
